<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:background="@drawable/help"
	android:layout_height="fill_parent">
	<ImageView android:background="@drawable/first_bg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<LinearLayout
	
		android:layout_height="wrap_content" android:layout_width="match_parent">
		
		<TextView 
			android:text="@string/login_pw_tv"
			android:textColor="#FF0000"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText 
			android:hint="@string/login_pw_et"
			android:maxLength="16"
			android:inputType="textPassword" android:layout_height="wrap_content"
			android:id="@+id/login_pw_ET" android:layout_width="match_parent"></EditText>
	</LinearLayout>
	
	<LinearLayout
		android:layout_height="wrap_content" android:layout_width="match_parent">
		<Button android:text="@string/login_ok_btn" android:id="@+id/login_ok_btn"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_green_selector"></Button>
		<Button android:text="@string/login_cancel_btn"
			android:layout_weight="1" android:id="@+id/login_cancel_btn"
			android:background="@drawable/btn_green_selector"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
		<Button android:layout_weight="1" android:text="@string/login_find_btn"
			android:background="@drawable/btn_green_selector"
			android:id="@+id/login_find_btn" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></Button>
	</LinearLayout>
</LinearLayout>
