<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:background="@drawable/pw_set_bg"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent">
	<TextView android:text="@string/set_pw_tv"
	android:textColor="#FF0000"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText android:layout_height="wrap_content" android:id="@+id/set_pw_ET"
		android:inputType="textPassword" android:layout_width="match_parent"></EditText>
	<TextView android:text="@string/set_pw_comfirm_tv"
	android:textColor="#FF0000"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText android:layout_height="wrap_content"
		android:inputType="textPassword" android:id="@+id/set_pw_comfirm_et"
		android:layout_width="match_parent"></EditText>
	<TextView android:text="@string/set_pw_question"
	android:textColor="#FF0000"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<Spinner android:id="@+id/question_spinner1"
		android:layout_height="wrap_content" android:entries="@array/question_arrays"
		android:layout_width="match_parent"></Spinner>
	<TextView android:text="@string/set_pw_answer" android:id="@+id/textView3"
	android:textColor="#FF0000"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText android:layout_height="wrap_content"
		android:inputType="textPassword" android:id="@+id/set_pw_answer"
		android:layout_width="match_parent"></EditText>
	<Button android:text="@string/set_pw_btn" android:id="@+id/set_pw_btn"
	android:textColor="#FF0000"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>
